- Fix torrent status icon vertical alignment in Web UI

--- a/src/webui/css/dynamicTable.css
+++ b/src/webui/css/dynamicTable.css
@@ -56,3 +56,7 @@
 	color: #fff;
 	cursor: pointer;
 }
+
+#transferList img.statusIcon {
+  margin-bottom: -4px;
+}
